--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4.4",
-        "symfony/event-dispatcher": "^2.3"
+        "symfony/event-dispatcher": "^2.3 | ^3"
     },
     "require-dev": {
         "phpspec/phpspec": "3.0.0"
